[workspace]

members = [
    "plugins/git/crates/model",
    "plugins/git/crates/plugin",
    "plugins/http/crates/model",
    "plugins/http/crates/plugin",
    "deployment"
]
resolver = "3"

[workspace.package]
version = "0.10.0"
authors = ["Andreas Schaeffer <hanack@nooblounge.net>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/reactive-graph/net"
homepage = "https://www.reactive-graph.io/"
keywords = ["graph", "reactive", "control-flow", "inexor"]
rust-version = "1.87.0"

[workspace.dependencies]
async-std = "1.12"
async-trait = "0.1"
default-test = "0.1"
git2 = "0.20"
json5 = "0.4"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = { version = "1.4.0-rc2", features = ["console_appender", "file_appender", "toml_format"] }
paste = "1.0"
rust-embed = { version = "8.7", features = ["debug-embed", "compression"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
springtime = "1.0"
springtime-di = { version = "1.0", default-features = false, features = ["threadsafe", "derive"] }
springtime-di-derive = "0.3"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.27"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "time", "rt", "rt-multi-thread"] }
toml = "0.9"
ureq = { version = "2.4", features = ["json"] }
url = "2.3"
uuid = { version = "1.17", features = ["serde", "v4", "v5"] }

### Prefer git to crates.io for development

reactive-graph-behaviour-model-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-behaviour-model-impl = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-behaviour-service-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-config-model = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-graph = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-runtime-model = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-plugin-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-plugin-derive = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-reactive-model-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-reactive-model-impl = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-reactive-service-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git", features = ["derive"] }
reactive-graph-reactive-service-impl = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-type-system-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git", features = ["json5", "toml"] }
reactive-graph-lifecycle = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-utils-test = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }

reactive-graph-std-base-model = { version = "0.10.0", git = "https://github.com/reactive-graph/std.git" }
reactive-graph-std-result-model = { version = "0.10.0", git = "https://github.com/reactive-graph/std.git" }
reactive-graph-sys-file-model = { version = "0.10.0", git = "https://github.com/reactive-graph/sys.git" }

### Prefer local to git for local development

#reactive-graph-behaviour-model-api = { version = "0.10.0", path = "../reactive-graph/crates/behaviour/model/api" }
#reactive-graph-behaviour-model-impl = { version = "0.10.0", path = "../reactive-graph/crates/behaviour/model/impl" }
#reactive-graph-behaviour-service-api = { version = "0.10.0", path = "../reactive-graph/crates/behaviour/service/api" }
#reactive-graph-config-model = { version = "0.10.0", path = "../reactive-graph/crates/config/model" }
#reactive-graph-graph = { version = "0.10.0", path = "../reactive-graph/crates/graph" }
#reactive-graph-plugin-api = { version = "0.10.0", path = "../reactive-graph/crates/plugin/api" }
#reactive-graph-plugin-derive = { version = "0.10.0", path = "../reactive-graph/crates/plugin/derive" }
#reactive-graph-reactive-model-api = { version = "0.10.0", path = "../reactive-graph/crates/reactive/model/api" }
#reactive-graph-reactive-model-impl = { version = "0.10.0", path = "../reactive-graph/crates/reactive/model/impl" }
#reactive-graph-reactive-service-api = { version = "0.10.0", path = "../reactive-graph/crates/reactive/service/api", features = ["derive"] }
#reactive-graph-reactive-service-impl = { version = "0.10.0", path = "../reactive-graph/crates/reactive/service/impl" }
#reactive-graph-runtime-api = { version = "0.10.0", path = "../reactive-graph/crates/runtime/api" }
#reactive-graph-runtime-model = { version = "0.10.0", path = "../reactive-graph/crates/runtime/model" }
#reactive-graph-type-system-api = { version = "0.10.0", path = "../reactive-graph/crates/type-system/api", features = ["json5", "toml"] }
#reactive-graph-lifecycle = { version = "0.10.0", path = "../reactive-graph/crates/lifecycle" }
#reactive-graph-utils-test = { version = "0.10.0", path = "../reactive-graph/crates/test-utils" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)', 'cfg(fn_traits)', 'cfg(unboxed_closures)'] }

[workspace.lints.clippy]
non_std_lazy_statics = "warn"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
